added menu and css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
+
+<ul class="menu">
+    <li><a href="https://www.google.com">Home</a></li>
+    <li><a href="https://www.google.com/news">News</a></li>
+    <li><a href="https://www.google.com/contact">Contact</a></li>
+    <li><a href="https://www.google.com/about">About</a></li>
+</ul>
 
 <h1>About</h1>
 <p>My name is Brian Wheelhouse and I love to build cool software.</p>
@@ -17,6 +25,7 @@
     <li>Class scheduler</li>
 </ul>
 <hr>
+<div class="experience">
 <h1>Work Experience</h1>
 <h2>Security Metrics - Software Developer Intern - February 2020 - Present</h2>
 <ul>
@@ -31,10 +40,11 @@
     <li>Full stack experience, everything from database to front-end</li>
     <li>Used Nodejs, Vue, sqllite, postgres, AWS, and other  platforms for building software.</li>
 </ul>
+</div>
 <hr>
 <h1>Contact</h1>
 <p>You can learn more about me and my experience on the following web pages: </p>
-<ul>
+<ul id="contact-list">
     <li><a href="https://www.linkedin.com/in/brian-wheelhouse">LinkedIn</a></li>
     <li><a href="https://github.com/bswheel">GitHub</a></li>
 </ul>
